--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema Integral de Administración de Recursos Humanos",
   "main": "backend/server.js",
   "scripts": {
-    "start": "cd backend && npm install --production && node server.js",
+    "start": "node fix-html-scripts.js && cd backend && npm install --production && node server.js",
     "dev": "cd backend && nodemon server.js",
     "build": "cd backend && npm install --production",
     "railway:start": "cd backend && npm install --production && node server.js"
