FEAT COMPLETE: Sistema de Auditoría y Auto-Diagnóstico V1.0
🎯 OBJETIVO CUMPLIDO:
Sistema completo de auditoría automatizada, testing, generación de datos
y auto-reparación híbrida para arquitectura multi-tenant modular.

📦 BACKEND COMPLETO (9 archivos nuevos):

1️⃣ src/models/AuditLog.js (350+ líneas)
   ✅ Modelo Sequelize con JSONB para máxima flexibilidad
   ✅ Campos completos: execution_id, test_type, error tracking, fix metadata
   ✅ Métodos: markAsCompleted, addError, recordFix, getExecutionSummary
   ✅ Soporta: endpoint, database, integration, e2e, performance, security tests

2️⃣ src/auditor/core/AuditorEngine.js (400+ líneas)
   ✅ Orchestrador principal con EventEmitter para real-time updates
   ✅ 4 fases: Recolección → Análisis → Auto-Healing → Reporte
   ✅ Execution tracking con UUID
   ✅ runFullAudit() y runModuleAudit()
   ✅ Parallel execution con Promise.allSettled

3️⃣ src/auditor/registry/SystemRegistry.js (500+ líneas)
   ✅ CEREBRO DEL SISTEMA - Auto-conocimiento completo
   ✅ canModuleWork() - Verifica dependencias activas
   ✅ analyzeDeactivationImpact() - Impacto de desactivar módulo
   ✅ suggestBundles() - Sugerencias comerciales inteligentes
   ✅ validateCompanyModules() - Coherencia multi-tenant

4️⃣ src/auditor/registry/modules-registry.json (365+ líneas)
   ✅ Registry completo de 12 módulos del sistema
   ✅ Metadata: id, name, category, version, description
   ✅ Dependencies: required, optional, integrates_with, provides_to
   ✅ Commercial: is_core, standalone, suggested_bundles
   ✅ API endpoints, database tables, business flows

5️⃣ src/auditor/collectors/EndpointCollector.js (200+ líneas)
   ✅ Tests automáticos de TODOS los API endpoints
   ✅ Verifica: status codes, response times, authentication
   ✅ Logs detallados a AuditLog
   ✅ Usa SystemRegistry para obtener endpoints

6️⃣ src/auditor/collectors/DatabaseCollector.js (150+ líneas)
   ✅ Tests de integridad de base de datos
   ✅ Verifica: conexión, tablas, relaciones, constraints
   ✅ D

--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@azure/cognitiveservices-face": "^5.0.0",
     "@azure/ms-rest-azure-js": "^2.1.0",
+    "@faker-js/faker": "^10.1.0",
     "@hapi/boom": "^10.0.1",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
