FEAT COMPLETE: Sistema de Asistente IA con Ollama + Llama 3.1 (8B) Local
🤖 SISTEMA 100% IMPLEMENTADO - IA Local sin costos mensuales

## 📊 COMPONENTES IMPLEMENTADOS:

### 1️⃣ BASE DE DATOS ✅
- migrations/20250119_create_assistant_knowledge_base.sql
  • Tabla assistant_knowledge_base con 8 índices optimizados
  • 2 funciones PostgreSQL: search_similar_answers(), get_assistant_stats()
  • Soporte para RAG (Retrieval Augmented Generation)
  • Multi-tenant con aislación por company_id
  • Feedback system (👍👎)
  • Aprendizaje progresivo (reused_count, improved_answer)
  • Full-text search en español
  • JSONB para contexto flexible

### 2️⃣ BACKEND - SERVICIO IA ✅
- src/services/AssistantService.js (800+ líneas)
  • Integración con Ollama (LLM local)
  • RAG: Búsqueda en knowledge base + contexto enriquecido
  • Context-aware: Detecta módulo actual del usuario
  • Auto-diagnóstico: Ejecuta AuditorEngine si detecta problemas
  • Sistema de feedback para aprendizaje
  • Fallback inteligente si Ollama no disponible
  • Health check de Ollama
  • Estadísticas de uso

### 3️⃣ BACKEND - API REST ✅
- src/routes/assistantRoutes.js
  • POST /api/assistant/chat - Enviar pregunta
  • POST /api/assistant/feedback - Registrar feedback (👍👎)
  • GET /api/assistant/history - Historial conversaciones
  • GET /api/assistant/stats - Estadísticas de uso
  • GET /api/assistant/health - Estado de Ollama
  • GET /api/assistant/:id - Detalle de conversación
  • JWT authentication
  • Multi-tenant security

### 4️⃣ BACKEND - MODELO SEQUELIZE ✅
- src/models/AssistantKnowledgeBase.js
  • Modelo completo con validaciones
  • Registrado en src/config/database.js
  • Exportado para uso en toda la app

### 5️⃣ FRONTEND - CHAT FLOTANTE ✅
- public/js/modules/ai-assistant-chat.js (1,100+ líneas)
  • Botón flotante (bottom-right) con animación pulse
  • Ventana de chat moderna con gradients
  • Tech stack badges VISIBLES:
    - 🧠 Ollama + Llama 3.1
    - ⚡ Node.js
    - 🐘 PostgreSQL
    - 📚 RAG
  • Mensaj

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,4 +24,23 @@ SMS_SENDER_ID=MedSystem
 
 # URLs del frontend (para notificaciones)
 FRONTEND_URL=http://localhost:9999
-APP_DEEP_LINK=medicalapp://
+APP_DEEP_LINK=medicalapp://# ====================================================================
+# OLLAMA + LLAMA 3.1 - ASISTENTE IA LOCAL
+# ====================================================================
+# Sistema de IA 100% local y privado (sin costos mensuales)
+# Documentación: docs/OLLAMA-INSTALLATION.md
+
+# 🤖 URL del servidor Ollama (local por defecto)
+OLLAMA_BASE_URL=http://localhost:11434
+
+# 🧠 Modelo a usar (llama3.1:8b recomendado para empezar)
+OLLAMA_MODEL=llama3.1:8b
+
+# 🌡️ Temperatura (0.0 = determinístico, 1.0 = creativo)
+OLLAMA_TEMPERATURE=0.7
+
+# 📝 Máximo de tokens en respuesta
+OLLAMA_MAX_TOKENS=500
+
+# ⏱️ Timeout para requests (ms)
+OLLAMA_TIMEOUT=30000
